// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartupScriptSelection empty state - no context values 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section />
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      />
    </div>
  </div>
</div>
`;

exports[`StartupScriptSelection initial render 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section />
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main addStartupScript Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
          data-test-id="addStartupScript"
          id="add-startup-script"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            common.addName
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`StartupScriptSelection readonly mode 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
      style="width: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="startupScriptList listHeader"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            style="width: 200px;"
          >
            store
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            style="width: 200px;"
          >
            location
          </p>
          <span />
        </div>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <section>
            <div
              class="rowItem"
            >
              <section
                class="startupScriptList"
              >
                <div
                  class="columnId"
                >
                  <div
                    class="connectorNameField"
                  />
                </div>
              </section>
            </div>
          </section>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-flex-start"
      />
    </div>
  </div>
</div>
`;
